feat: telemetry install and new endpoint for console (#77)
* feat: telemetry install and new endpoint for console

* fix: feedback
